--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@BrettThurs10/simply-render",
-  "version": "0.0.2",
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
+  "version": "0.0.3",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "files": [
     "dist"
   ],
@@ -10,6 +10,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
+  "typings": "dist/index.d.ts",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -25,7 +26,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "build-watch": "rollup -c -w"
   },
   "eslintConfig": {
     "extends": [
