--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@BrettThurs10/simply-render",
-  "version": "0.0.3",
+  "name": "@brettthurs10/simply-render",
+  "version": "0.0.4",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
+  "type": "module",
   "files": [
     "dist"
   ],
@@ -27,7 +28,10 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "build-watch": "rollup -c -w"
+    "build-watch": "rollup -c -w",
+    "start-playground": "cd playground && npm run start",
+    "i-all": "npm i && cd playground && npm i",
+    "dev": "npm-run-all --parallel build-watch start-playground"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +54,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
+    "npm-run-all": "^4.1.5",
     "rollup": "^2.72.1",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
